[tool.poetry]
name = "fastapi-dummy-test-db"
version = "0.1.0"
description = ""
authors = ["tokusumi <tksmtoms@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.61.2"
sqlalchemy = "^1.3.20"
sqlalchemy-utils = "^0.36.8"
requests = "^2.24.0"
async-exit-stack = "^1.0.1"
async-generator = "^1.10"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
black = "^20.8b1"
flake8 = "^3.8.4"
pytest = "^6.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
